# academic-agent

./: .env.example  .gitignore  check_settings.py  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  pyproject.toml  readme.md  requirements.txt  test_ingestion.py  zeabur.toml  结构.txt
config/: settings.py
config/prompts/: ingestion.yaml  research.yaml
core/: clustering.py  llm.py  pdf_loader.py  qdrant.py  search.py  text_splitter.py
graph/ingestion/: nodes.py  state.py  workflow.py
graph/research/: nodes.py  state.py  workflow.py
ui/: app.py
ui/components/: chat_interface.py  pdf_uploader.py  state_visualizer.py
ui/pages/: 1_Knowledge_Base.py  2_Research_Assistant.py  3_Knowledge_Clustering.py  4_Idea_Debate.py
utils/: logger.py
