[project]
name = "academic-agent"
version = "0.1.0"
description = "An academic research assistant agent powered by LangGraph"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-openai>=0.1.0",
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.1.0",
    "streamlit>=1.35.0",
    "watchdog>=4.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.2.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "graph*", "ui*", "utils*", "config*"]
namespaces = false