[project]
name = "academic-agent"
version = "0.1.0"
description = "基于 LangGraph、DeepSeek 和 Qdrant 构建的自主学术研究助手系统"
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "konxx" }
]
keywords = [
    "langgraph",
    "langchain",
    "rag",
    "ai-agent",
    "academic-research",
    "qdrant",
    "deepseek",
    "streamlit"
]

dependencies = [
    # --- 核心框架 ---
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint>=1.0.0",
    "langgraph-checkpoint-sqlite>=1.0.0",

    # --- LLM 提供商 ---
    "langchain-openai>=0.1.0",

    # --- 向量数据库 ---
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.1.0",

    # --- Web UI ---
    "streamlit>=1.35.0",
    "watchdog>=4.0.0",

    # --- 配置与数据验证 ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # --- 文档处理 ---
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.2.0",

    # --- 联网搜索 ---
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/konxx/academic-agent"
"Repository" = "https://github.com/konxx/academic-agent"
"Bug Tracker" = "https://github.com/konxx/academic-agent/issues"

[project.scripts]
academic-agent = "ui.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "graph*", "ui*", "utils*", "config*"]
namespaces = false

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["core", "graph", "ui", "utils", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"